asyn database included

--- a/ThorlabsAPTApp/Db/Makefile
+++ b/ThorlabsAPTApp/Db/Makefile
@@ -12,6 +12,7 @@ include $(TOP)/configure/CONFIG
 # databases, templates, substitutions like this
 #DB += xxx.db
 DB += ThorlabsAPT.db
+DB += asyn.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
